# tak

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README  array2d.h  array3d.h  autolock.h  camera.cpp  camera.h  config.h  config.h.cmake  define.h  engine.cpp  engine.h  fixedcamera.cpp  fixedcamera.h  font.cpp  font.h  fpscamera.cpp  fpscamera.h  game.cpp  game.h  gldebugdrawer.cpp  gldebugdrawer.h  init.cpp  init.h  lookatcamera.cpp  lookatcamera.h  main.cpp  material.cpp  material.h  matrix3.h  matrix4.h  mesh.cpp  mesh.h  model.cpp  model.h  mutex.h  network.cpp  (+52 more)
tools/bundleelf/: Makefile  README  genproj.sh  main.cpp  premake4.lua
tools/mimp/: genproj.sh  main.cpp  premake4.lua
